tweaked to run at netit.au

--- a/css/invoice-capture.css
+++ b/css/invoice-capture.css
@@ -391,8 +391,8 @@ hr{
     margin-left:18ch;
 }
 #uploadForm{
-    /* display:none; */
+    display:none;
 }
 #supplierConnectCode{
-    /* display:none; */
+    display:none;
 }
